--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="underline">#D8D6D6</color>
+    <color name="deletecolor">#DD3124</color>
+    <color name="archiveColor">#3AE015</color>
 </resources>
