need to finish motion layout

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -9,13 +9,14 @@
     tools:context=".MainActivity2">
 
     <ImageView
+        android:background="@drawable/r_colosseum"
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="280dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/r_colosseum" />
+        />
 
     <TextView
         android:id="@+id/textView"
