--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -30,7 +30,7 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tab 1" />
+            android:text="Home" />
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
