--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".Fragment2">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Tab 2"
-        android:gravity="center"
-        android:textColor="@color/black"
-        android:textSize="40dp"
-        />
+    <ImageView
+        android:id="@+id/colosseum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/giphy">
+    </ImageView>
+
 
 </FrameLayout>
